--- a/tmc/RateComparison.html
+++ b/tmc/RateComparison.html
@@ -28,23 +28,13 @@
         var options = {
             selector: "#RateComparison",
             api_url: 'https://api-test.nonprod.travelmoneyclub.co.uk',
-            button_url: 'https://www.travelmoneyclub.co.uk/instant-quote',
-
-            // Optional (with defaults)
-            // scroll_speed: 3000, // How quickly the slide should scroll
-            // scroll_pause: 2000, // How long the slide should stay in place before moving to the next one
-            // comparison_amount: 2500,
-            // poll_frequency: 10000,
-            // button_text: "Buy now",
-            // error_message: 'Whoops! Something went wrong please contact us for help or click the retry button below.',
-            // results_message: "Get this £{saving} right now when exchanging £{comparison_amount}",
-
-            // TMC
-            // premium_rates_enabled: false,
-            // banner_visible: true,
-            // banner_link: "http://",
-            // banner_text: "Go premium for even better rates",
-            // suspended_currency_text: 'This currency is temporarily unavailable.',
+            results_message: "Save up to £{saving} right now when exchanging £{comparison_amount}",
+            button_url: "https://www.travelmoneyclub.co.uk/go-premium/",
+            button_text: "Join the club",
+            premium_rates_enabled: true,
+            banner_visible: true,
+            banner_link: "https://www.travelmoneyclub.co.uk/go-premium/",
+            banner_text: "Go premium for even bigger savings",
         };
 
         var widget = SPENDOLOGY.RateComparison.new(options).render({
