--- a/tmc/RateComparison.html
+++ b/tmc/RateComparison.html
@@ -38,7 +38,9 @@
         };
 
         var widget = SPENDOLOGY.RateComparison.new(options).render({
-            currencies: []
+            currencies: [
+                "EUR", "USD", "AED", "AUD", "CAD", "CHF", "CZK", "DKK", "HKD", "HRK", "HUF", "JPY", "MXN", "NOK", "NZD", "PLN", "SEK", "SGD", "THB", "ZAR"
+            ]
         });
     });
 </script>
