--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,21 @@
 <body>
     <ul class="ml-10">
         <li>
+            EXC
+            <ul class="list-disc ml-10">
+                <li>
+                    <a href="exc/InstantQuote.html?referral_code=ABCDEF123">InstantQuote</a>
+                </li>
+                <li>
+                    <a href="exc/LiveRateBoard.html">LiveRateBoard</a>
+                </li>
+                <li>
+                    <a href="exc/RateComparison.html">RateComparison</a>
+                </li>
+            </ul>
+        </li>
+
+        <li>
             TMC
             <ul class="list-disc ml-10">
                 <li>
@@ -31,7 +46,7 @@
         <li>
             VJV
             <ul class="list-disc ml-10">
-                <li><a href="./vjv/InstantQuote.html">InstantQuote</a></li>
+                <li><a href="vjvnstantQuote.html">InstantQuote</a></li>
             </ul>
         </li>
     </ul>
