--- a/src/exc/LiveRateBoard.html
+++ b/src/exc/LiveRateBoard.html
@@ -31,7 +31,7 @@
         var options = {
             selector: "#RateBoard",
             api_url: 'https://api-test.exc-nonprod.spendology.cloud',
-            banner_visible: true,
+            banner_visible: false,
             banner_link: "https://www.travelmoneyclub.co.uk/go-premium/",
             banner_text: "Go premium for even better rates",
         };
