--- a/src/exc/RateComparison.html
+++ b/src/exc/RateComparison.html
@@ -29,10 +29,10 @@
             selector: "#RateComparison",
             api_url: 'https://api-test.exc-nonprod.spendology.cloud',
             results_message: "Save up to £{saving} right now when exchanging £{comparison_amount}",
-            button_url: "https://www.travelmoneyclub.co.uk/go-premium/",
-            button_text: "Join the club",
-            premium_rates_enabled: true,
-            banner_visible: true,
+            button_url: "https://www.exchngr.co.uk/instant-quote/",
+            button_text: "get an instant quote",c
+            premium_rates_enabled: false,
+            banner_visible: false,
             banner_link: "https://www.travelmoneyclub.co.uk/go-premium/",
             banner_text: "Go premium for even bigger savings",
         };
