--- a/src/index.html
+++ b/src/index.html
@@ -46,7 +46,7 @@
         <li>
             VJV
             <ul class="list-disc ml-10">
-                <li><a href="vjvnstantQuote.html">InstantQuote</a></li>
+                <li><a href="vjv/InstantQuote.html">InstantQuote</a></li>
             </ul>
         </li>
     </ul>
