--- a/src/index.html
+++ b/src/index.html
@@ -3,52 +3,95 @@
 <head>
     <meta charset="UTF-8">
     <title>Widget Examples</title>
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss/dist/tailwind.min.css" rel="stylesheet">
-    <style>
-        a {
-            color:blue;
-            text-decoration:underline;
-        }
-    </style>
+    <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.3.5/dist/alpine.min.js" defer></script>
+    <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
 </head>
 <body>
-    <ul class="ml-10">
-        <li>
-            EXC
-            <ul class="list-disc ml-10">
-                <li>
-                    <a href="exc/InstantQuote.html?referral_code=ABCDEF123">InstantQuote</a>
-                </li>
-                <li>
-                    <a href="exc/LiveRateBoard.html">LiveRateBoard</a>
-                </li>
-                <li>
-                    <a href="exc/RateComparison.html">RateComparison</a>
-                </li>
-            </ul>
-        </li>
-
-        <li>
-            TMC
-            <ul class="list-disc ml-10">
-                <li>
-                    <a href="tmc/InstantQuote.html?referral_code=ABCDEF123">InstantQuote</a>
-                </li>
-                <li>
-                    <a href="tmc/LiveRateBoard.html">LiveRateBoard</a>
-                </li>
-                <li>
-                    <a href="tmc/RateComparison.html">RateComparison</a>
-                </li>
-            </ul>
-        </li>
-
-        <li>
-            VJV
-            <ul class="list-disc ml-10">
-                <li><a href="vjv/InstantQuote.html">InstantQuote</a></li>
-            </ul>
-        </li>
-    </ul>
+    <div class="grid grid-cols-3 h-screen" x-data="getData()">
+        <div class="col-span-1 border-r-4 grid grid-cols-1">
+        <template x-for="client in clients">
+            <div class="ml-10 border-4 shadow-sm p-5 m-5 text-center">
+                <div class="text-xl mb-5" x-text="client.name + ' (' + client.code + ')'"></div>
+                <template x-for="widget in client.widgets">
+                    <div class="mb-5">
+                        <button
+                            class="text-white font-semibold py-2 px-4 border border-gray-400 rounded shadow"
+                            :class="widget.classes"
+                            x-text="widget.name"
+                            x-on:click="loadWidget(widget.path)"
+                        ></button>
+                    </div>
+                </template>
+            </div>
+        </template>
+        </div>
+        <div class="col-span-2">
+            <iframe src="exc/InstantQuote.html" width="100%" class="h-screen " id="widget-preview"></iframe>
+        </div>
+    </div>
+    <script>
+        function loadWidget(widgetPath) {
+            document.getElementById('widget-preview').src = widgetPath;
+        }
+        function getData() {
+            return {
+                clients: [
+                    {
+                        code: 'EXC',
+                        name: 'Exchngr',
+                        widgets: [
+                            {
+                                name: 'Instant Quote',
+                                path: 'exc/InstantQuote.html',
+                                classes: 'bg-blue-500 hover:bg-blue-700',
+                            },
+                            {
+                                name: 'LiveRateBoard',
+                                path: 'exc/LiveRateBoard.html',
+                                classes: 'bg-green-500 hover:bg-green-700',
+                            },
+                            {
+                                name: 'RateComparison',
+                                path: 'exc/RateComparison.html',
+                                classes: 'bg-orange-500 hover:bg-orange-700',
+                            },
+                        ]
+                    },
+                    {
+                        code: 'TMC',
+                        name: 'Travel Money Club',
+                        widgets: [
+                            {
+                                name: 'Instant Quote',
+                                path: 'tmc/InstantQuote.html?referral_code=ABC123',
+                                classes: 'bg-blue-500 hover:bg-blue-700',
+                            },
+                            {
+                                name: 'LiveRateBoard',
+                                path: 'tmc/LiveRateBoard.html',
+                                classes: 'bg-green-500 hover:bg-green-700',
+                            },
+                            {
+                                name: 'RateComparison',
+                                path: 'tmc/RateComparison.html',
+                                classes: 'bg-orange-500 hover:bg-orange-700',
+                            },
+                        ]
+                    },
+                    {
+                        code: 'VJV',
+                        name: 'Jules Verne',
+                        widgets: [
+                            {
+                                name: 'Instant Quote',
+                                path: 'vjv/InstantQuote.html',
+                                classes: 'bg-blue-500 hover:bg-blue-700',
+                            },
+                        ]
+                    },
+                ]
+            }
+        }
+    </script>
 </body>
 </html>
