--- a/src/tmc/InstantQuote.html
+++ b/src/tmc/InstantQuote.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="TravelMoneyClub.co.uk">
     <title>TravelMoneyClub</title>
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss/dist/tailwind.min.css" rel="stylesheet">
+    <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
     <script src="https://www.w3schools.com/lib/w3.js"></script>
     <link href="../assets/css/europa_font.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
@@ -48,7 +48,7 @@
 
         var options = {
             selector: "#InstantQuote",
-            api_url: 'https://api-test.nonprod.travelmoneyclub.co.uk',
+            api_url: 'https://api-prod.prod.travelmoneyclub.co.uk',
             button_url: 'https://app-test.nonprod.travelmoneyclub.co.uk/signup',
             delivery_text: "*We charge £{delivery_charge} for delivery in two business days by 1pm. " +
                 "<a href=\"https://www.travelmoneyclub.co.uk/go-premium/\">Go Premium</a> " +
