--- a/src/tmc/LiveRateBoard.html
+++ b/src/tmc/LiveRateBoard.html
@@ -7,7 +7,7 @@
     <meta name="author" content="TravelMoneyClub.co.uk">
     <title>TravelMoneyClub</title>
     <script src="https://www.w3schools.com/lib/w3.js"></script>
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss/dist/tailwind.min.css" rel="stylesheet">
+    <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
     <link href="../assets/css/europa_font.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
 </head>
