--- a/src/tmc/InstantQuote.html
+++ b/src/tmc/InstantQuote.html
@@ -48,7 +48,7 @@
 
         var options = {
             selector: "#InstantQuote",
-            api_url: 'https://api-test.test.travelmoneyclub.co.uk',
+            api_url: 'https://api-test.nonprod.travelmoneyclub.co.uk',
             button_url: 'https://app-test.nonprod.travelmoneyclub.co.uk/signup',
             delivery_text: "*We charge £{delivery_charge} for delivery in two business days by 1pm. " +
                 "<a href=\"https://www.travelmoneyclub.co.uk/go-premium/\">Go Premium</a> " +
