--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <div class="grid grid-cols-4 h-screen" x-data="getData()">
-        <div class="col-span-1 border-r-4 grid grid-cols-1">
+        <div class="col-span-1 border-r-4 grid grid-cols-1 p-5 pb-0">
             <template x-for="client in clients">
-                <div class="border-4 shadow-sm p-5 m-5 text-center">
+                <div class="border-4 shadow-sm p-5 mb-5 text-center">
                     <div class="text-xl mb-5" x-text="client.name + ' (' + client.code + ')'"></div>
                     <template x-for="widget in client.widgets">
                         <div class="mb-5">
