--- a/src/exc/LiveRateBoard.html
+++ b/src/exc/LiveRateBoard.html
@@ -31,6 +31,7 @@
         var options = {
             selector: "#RateBoard",
             api_url: 'https://api-test.exc-nonprod.spendology.cloud',
+            button_url: 'https://www.exchngr.co.uk/instant-quote/',
         };
         SPENDOLOGY.LiveRateBoard.new(options).render();
     });
