--- a/src/tmc/LiveRateBoard.html
+++ b/src/tmc/LiveRateBoard.html
@@ -31,6 +31,7 @@
         var options = {
             selector: "#RateBoard",
             api_url: 'https://api-test.nonprod.travelmoneyclub.co.uk',
+            button_url: 'https://www.travelmoneyclub.co.uk/instant-quote',
             banner_visible: true,
             banner_link: "https://www.travelmoneyclub.co.uk/go-premium/",
             banner_text: "Go premium for even better rates",
