--- a/src/tmc/InstantQuote.html
+++ b/src/tmc/InstantQuote.html
@@ -49,7 +49,7 @@
         var options = {
             selector: "#InstantQuote",
             api_url: 'https://api-test.tmc-nonprod.spendology.cloud',
-            button_url: 'https://app-test.nonprod.travelmoneyclub.co.uk/signup',
+            button_url: 'https://app-test.tmc-nonprod.spendology.cloud',
             delivery_text: "*We charge £{delivery_charge} for delivery in two business days by 1pm. " +
                 "<a href=\"https://www.travelmoneyclub.co.uk/go-premium/\">Go Premium</a> " +
                 "for next business day delivery.",
