--- a/src/tmc/LiveRateBoard.html
+++ b/src/tmc/LiveRateBoard.html
@@ -30,7 +30,7 @@
     window.addEventListener('SPENDOLOGY_WIDGETS_LOADED', function() {
         var options = {
             selector: "#RateBoard",
-            api_url: 'https://api-test.nonprod.travelmoneyclub.co.uk',
+            api_url: 'https://api-test.tmc-nonprod.spendology.cloud',
             button_url: 'https://www.travelmoneyclub.co.uk/instant-quote',
             banner_visible: true,
             banner_link: "https://www.travelmoneyclub.co.uk/go-premium/",
