--- a/src/tmc/RateComparison.html
+++ b/src/tmc/RateComparison.html
@@ -27,7 +27,7 @@
     window.addEventListener('SPENDOLOGY_WIDGETS_LOADED', function () {
         var options = {
             selector: "#RateComparison",
-            api_url: 'https://api-test.nonprod.travelmoneyclub.co.uk',
+            api_url: 'https://api-test.tmc-nonprod.spendology.cloud',
             results_message: "Save up to £{saving} right now when exchanging £{comparison_amount}",
             button_url: "https://www.travelmoneyclub.co.uk/go-premium/",
             button_text: "Join the club",
