--- a/src/index.html
+++ b/src/index.html
@@ -10,15 +10,18 @@
 </head>
 <body>
     <div class="grid grid-cols-4 h-screen" x-data="getData()">
-        <div class="col-span-1 border-r-4 grid grid-cols-1 p-5 pb-0 overflow-auto">
+        <div class="col-span-1 border-r-4 grid grid-cols-1 p-2 pb-0 overflow-auto">
             <template x-for="client in clients">
-                <div class="border-4 shadow-sm p-5 mb-5 text-center">
+                <div class="border-4 shadow-sm p-2 mb-5 text-center">
                     <div class="text-xl mb-5" x-text="client.name + ' (' + client.code + ')'"></div>
-                    <div class="grid grid-cols-1" x-bind:class="{'xl:grid-cols-3' : client.widgets.length == 3}">
+                    <div class="grid grid-cols-1" x-bind:class="{
+                        'xl:grid-cols-3' : client.widgets.length == 3,
+                        'lg:grid-cols-2' : client.widgets.length == 2,
+                    }">
                         <template x-for="widget in client.widgets">
-                            <div class="mb-5">
+                            <div class="mb-2">
                                 <button
-                                    class="text-white font-semibold py-1 px-2 border rounded shadow h-full"
+                                    class="text-white text-sm font-semibold py-1 px-2 border rounded shadow h-full"
                                     :class="widget.classes"
                                     x-text="widget.name"
                                     x-on:click="loadWidget(widget.path, client.referralCode)"
@@ -62,6 +65,38 @@
             return {
                 clients: [
                     {
+                        code: 'USD',
+                        name: 'Altour',
+                        widgets: [
+                            {
+                                name: 'Instant Quote',
+                                path: 'alt/InstantQuote.html',
+                                classes: 'bg-blue-500 hover:bg-blue-700',
+                            },
+                            {
+                                name: 'Live Rate Board',
+                                path: 'alt/LiveRateBoard.html',
+                                classes: 'bg-green-500 hover:bg-green-700',
+                            },
+                            {
+                                name: 'Rate Comparison',
+                                path: 'alt/RateComparison.html',
+                                classes: 'bg-orange-500 hover:bg-orange-700',
+                            },
+                        ]
+                    },
+                    {
+                        code: 'CRU',
+                        name: 'Cruise1st',
+                        widgets: [
+                            {
+                                name: 'Instant Quote',
+                                path: 'cru/InstantQuote.html',
+                                classes: 'bg-blue-500 hover:bg-blue-700',
+                            },
+                        ]
+                    },
+                    {
                         code: 'EXC',
                         name: 'Exchngr',
                         widgets: [
@@ -100,6 +135,22 @@
                             {
                                 name: 'Rate Comparison',
                                 path: 'tmc/RateComparison.html',
+                                classes: 'bg-orange-500 hover:bg-orange-700',
+                            },
+                        ]
+                    },
+                    {
+                        code: 'TCT',
+                        name: 'Thomas Cook',
+                        widgets: [
+                            {
+                                name: 'Instant Quote',
+                                path: 'tct/InstantQuote.html',
+                                classes: 'bg-blue-500 hover:bg-blue-700',
+                            },
+                            {
+                                name: 'Rate Comparison',
+                                path: 'tct/RateComparison.html',
                                 classes: 'bg-orange-500 hover:bg-orange-700',
                             },
                         ]
