--- a/src/tct/RateComparison.html
+++ b/src/tct/RateComparison.html
@@ -43,7 +43,7 @@
             };
 
             SPENDOLOGY.RateComparison.new(rateComparisonOptions).render({
-                currencies: ["RMB", ]
+                currencies: ["EUR", ]
             });
             widget.appendChild(p);
         }
