--- a/src/alt/LiveRateBoard.html
+++ b/src/alt/LiveRateBoard.html
@@ -31,10 +31,7 @@
         var options = {
             selector: "#RateBoard",
             api_url: 'https://api-test.alt-nonprod.spendology.cloud',
-            button_url: 'https://www.travelmoneyclub.co.uk/instant-quote',
-            banner_visible: true,
-            banner_link: "https://www.travelmoneyclub.co.uk/go-premium/",
-            banner_text: "Go premium for even better rates",
+            button_url: 'https://app-test.alt-nonprod.spendology.cloud/signup',
         };
 
         if (SPENDOLOGY.hasOwnProperty('saveReferralData')) {
