--- a/src/index.html
+++ b/src/index.html
@@ -78,11 +78,11 @@
                                 path: 'alt/LiveRateBoard.html',
                                 classes: 'bg-green-500 hover:bg-green-700',
                             },
-                            {
-                                name: 'Rate Comparison',
-                                path: 'alt/RateComparison.html',
-                                classes: 'bg-orange-500 hover:bg-orange-700',
-                            },
+                            // {
+                            //     name: 'Rate Comparison',
+                            //     path: 'alt/RateComparison.html',
+                            //     classes: 'bg-orange-500 hover:bg-orange-700',
+                            // },
                         ]
                     },
                     {
