--- a/src/alt/RateComparison.html
+++ b/src/alt/RateComparison.html
@@ -29,12 +29,8 @@
             selector: "#RateComparison",
             api_url: 'https://api-test.alt-nonprod.spendology.cloud',
             results_message: "Save up to ${saving} right now when exchanging ${comparison_amount}",
-            button_url: "https://www.travelmoneyclub.co.uk/go-premium/",
-            button_text: "Join the club",
-            premium_rates_enabled: true,
-            banner_visible: true,
-            banner_link: "https://www.travelmoneyclub.co.uk/go-premium/",
-            banner_text: "Go premium for even bigger savings",
+            button_url: "https://app-test.alt-nonprod.spendology.cloud/signup",
+            button_text: "Buy Now",
         };
 
         if (SPENDOLOGY.hasOwnProperty('saveReferralData')) {
