alt remove premium text

--- a/src/alt/InstantQuote.html
+++ b/src/alt/InstantQuote.html
@@ -50,9 +50,7 @@
             selector: "#InstantQuote",
             api_url: 'https://api-test.alt-nonprod.spendology.cloud',
             button_url: 'https://app-test.alt-nonprod.spendology.cloud/signup',
-            delivery_text: "*We charge {base_currency_symbol}{delivery_charge} for delivery in two business days by 1pm. " +
-                "<a href=\"https://www.travelmoneyclub.co.uk/go-premium/\">Go Premium</a> " +
-                "for next business day delivery.",
+            delivery_text: "*We charge {base_currency_symbol}{delivery_charge} for delivery in two business days by 1pm.",
             saving_text: "If you buy {base_currency_symbol}{cost} of {target_currency_code} from Travel Money Club at " +
                 "{target_currency_symbol}{rate} you will save {base_currency_symbol}{saving_amount}. If you bought the same amount of " +
                 "{target_currency_code} from {competitor_name} it would cost you {base_currency_symbol}{competitor_cost} at their " +
