--- a/src/alt/LiveRateBoard.html
+++ b/src/alt/LiveRateBoard.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="TravelMoneyClub.co.uk">
-    <title>TravelMoneyClub</title>
+    <title>Rate Board</title>
     <script src="https://www.w3schools.com/lib/w3.js"></script>
     <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
     <link href="../assets/css/europa_font.css" rel="stylesheet">
@@ -31,7 +31,7 @@
         var options = {
             selector: "#RateBoard",
             api_url: 'https://api-test.alt-nonprod.spendology.cloud',
-            button_url: 'https://app-test.alt-nonprod.spendology.cloud/signup',
+            button_url: 'https://spendology-widget-testing.netlify.app/alt/InstantQuote.html',
         };
 
         if (SPENDOLOGY.hasOwnProperty('saveReferralData')) {
