--- a/src/alt/InstantQuote.html
+++ b/src/alt/InstantQuote.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="TravelMoneyClub.co.uk">
-    <title>TravelMoneyClub</title>
+    <title>Instant Quote</title>
     <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
     <script src="https://www.w3schools.com/lib/w3.js"></script>
     <link href="../assets/css/europa_font.css" rel="stylesheet">
@@ -50,7 +50,7 @@
             selector: "#InstantQuote",
             api_url: 'https://api-test.alt-nonprod.spendology.cloud',
             button_url: 'https://app-test.alt-nonprod.spendology.cloud/signup',
-            delivery_text: "*We charge {base_currency_symbol}{delivery_charge} for delivery in two business days by 1pm.",
+            delivery_text: "*We charge {base_currency_symbol}{delivery_charge} for next business day delivery by 1pm.",
             saving_text: "If you buy {base_currency_symbol}{cost} of {target_currency_code} from Travel Money Club at " +
                 "{target_currency_symbol}{rate} you will save {base_currency_symbol}{saving_amount}. If you bought the same amount of " +
                 "{target_currency_code} from {competitor_name} it would cost you {base_currency_symbol}{competitor_cost} at their " +
