--- a/src/alt/LiveRateBoard.html
+++ b/src/alt/LiveRateBoard.html
@@ -30,7 +30,7 @@
     window.addEventListener('SPENDOLOGY_WIDGETS_LOADED', function() {
         var options = {
             selector: "#RateBoard",
-            api_url: 'https://api-test.alt-nonprod.spendology.cloud',
+            api_url: 'https://api-test.alt-nonprod.us.spendology.cloud',
             button_url: 'https://spendology-widget-testing.netlify.app/alt/InstantQuote.html',
         };
 
