--- a/src/alt/RateComparison.html
+++ b/src/alt/RateComparison.html
@@ -27,9 +27,9 @@
     window.addEventListener('SPENDOLOGY_WIDGETS_LOADED', function () {
         var options = {
             selector: "#RateComparison",
-            api_url: 'https://api-test.alt-nonprod.spendology.cloud',
+            api_url: 'https://api-test.alt-nonprod.us.spendology.cloud',
             results_message: "Save up to ${saving} right now when exchanging ${comparison_amount}",
-            button_url: "https://app-test.alt-nonprod.spendology.cloud/signup",
+            button_url: "https://app-test.alt-nonprod.us.spendology.cloud/signup",
             button_text: "Buy Now",
         };
 
