--- a/src/alt/InstantQuote.html
+++ b/src/alt/InstantQuote.html
@@ -48,8 +48,8 @@
 
         var options = {
             selector: "#InstantQuote",
-            api_url: 'https://api-test.alt-nonprod.spendology.cloud',
-            button_url: 'https://app-test.alt-nonprod.spendology.cloud/signup',
+            api_url: 'https://api-test.alt-nonprod.us.spendology.cloud',
+            button_url: 'https://app-test.alt-nonprod.us.spendology.cloud/signup',
             delivery_text: "*We charge {base_currency_symbol}{delivery_charge} for next business day delivery by 1pm.",
             saving_text: "If you buy {base_currency_symbol}{cost} of {target_currency_code} from Travel Money Club at " +
                 "{target_currency_symbol}{rate} you will save {base_currency_symbol}{saving_amount}. If you bought the same amount of " +
