add ffx remove bht

--- a/src/index.html
+++ b/src/index.html
@@ -86,28 +86,6 @@
                         ]
                     },
                     {
-                        code: 'BHT',
-                        name: 'Barrhead',
-                        widgets: [
-                            {
-                                name: 'Instant Quote',
-                                path: 'bht/InstantQuote.html',
-                                classes: 'bg-blue-500 hover:bg-blue-700',
-                            },
-                        ]
-                    },
-                    {
-                        code: 'CRU',
-                        name: 'Cruise1st',
-                        widgets: [
-                            {
-                                name: 'Instant Quote',
-                                path: 'cru/InstantQuote.html',
-                                classes: 'bg-blue-500 hover:bg-blue-700',
-                            },
-                        ]
-                    },
-                    {
                         code: 'EXC',
                         name: 'Exchngr',
                         widgets: [
@@ -125,6 +103,17 @@
                                 name: 'Rate Comparison',
                                 path: 'exc/RateComparison.html',
                                 classes: 'bg-orange-500 hover:bg-orange-700',
+                            },
+                        ]
+                    },
+                    {
+                        code: 'FFX',
+                        name: 'FairFx',
+                        widgets: [
+                            {
+                                name: 'Instant Quote',
+                                path: 'ffx/InstantQuote.html',
+                                classes: 'bg-blue-500 hover:bg-blue-700',
                             },
                         ]
                     },
