--- a/src/index.html
+++ b/src/index.html
@@ -118,6 +118,22 @@
                         ]
                     },
                     {
+                        code: 'MCY',
+                        name: 'Mercury Holidays',
+                        widgets: [
+                            {
+                                name: 'Instant Quote',
+                                path: 'mcy/InstantQuote.html',
+                                classes: 'bg-blue-500 hover:bg-blue-700',
+                            },
+                            {
+                                name: 'Rate Comparison',
+                                path: 'mcy/RateComparison.html',
+                                classes: 'bg-orange-500 hover:bg-orange-700',
+                            },
+                        ]
+                    },
+                    {
                         code: 'TCT',
                         name: 'Thomas Cook',
                         widgets: [
