--- a/src/alt/LiveRateBoard.html
+++ b/src/alt/LiveRateBoard.html
@@ -8,37 +8,64 @@
     <title>Rate Board</title>
     <script src="https://www.w3schools.com/lib/w3.js"></script>
     <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
-    <link href="../assets/css/europa_font.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+    <link href="css/astra.css" rel="stylesheet">
+    <link href="css/frontend-lite.min.css" rel="stylesheet">
+    <link href="css/main.min.css" rel="stylesheet">
+    <link href="css/global.css" rel="stylesheet">
+    <link href="css/post-5.css" rel="stylesheet">
+    <link href="css/post-7.css" rel="stylesheet">
+    <link href="css/post-13.css" rel="stylesheet">
+    <link href="css/post-205.css" rel="stylesheet">
+    <link href="css/widget-carousel.min.css" rel="stylesheet">
+    <link href="css/widget-nav-menu.min.css" rel="stylesheet">
 </head>
 
 <body>
-    <br />
+<br/>
 
-    <div class="flex mb-4">
-        <div class="sm:invisible md:w-1/3"></div>
-        <div class="sm:w-full md:w-1/3">
-            <div id="RateBoard"></div>
+<div class="flex mb-4">
+    <div class="sm:invisible md:w-1/3"></div>
+    <div class="sm:w-full md:w-1/3">
+        <div class="entry-content elementor-7 elementor-kit-5 elementor-13 elementor-205">
+            <section class="elementor-section elementor-top-section elementor-element elementor-element-ff322a5 elementor-section-content-middle elementor-section-boxed elementor-section-height-default elementor-section-height-default" data-id="ff322a5" data-element_type="section">
+                <div class="elementor-container elementor-column-gap-default">
+                    <div class="elementor-column elementor-col-50 elementor-top-column elementor-element elementor-element-68e74f0" data-id="68e74f0" data-element_type="column" data-settings="{&quot;background_background&quot;:&quot;classic&quot;}">
+                        <div class="elementor-widget-wrap elementor-element-populated">
+                            <div class="elementor-element elementor-element-8609224 lmd-money-back elementor-widget elementor-widget-html" data-id="8609224" data-element_type="widget" data-widget_type="html.default">
+                                <div class="elementor-widget-container">
+                                    <div class="widget">
+                                        <div id="LiveRateBoard"></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </div>
-        <div class="sm:invisible md:w-1/3"></div>
     </div>
+    <div class="sm:invisible md:w-1/3"></div>
+</div>
 
-    <script src="../assets/js/snippet.js"></script>
-    <script defer>w3.includeHTML()</script>
+<script src="../assets/js/snippet.js"></script>
+<script defer>w3.includeHTML()</script>
 </body>
 <script>
-    window.addEventListener('SPENDOLOGY_WIDGETS_LOADED', function() {
-        var options = {
-            selector: "#RateBoard",
-            api_url: 'https://api-test.alt-nonprod.us.spendology.cloud',
-            button_url: 'https://spendology-widget-testing.netlify.app/alt/InstantQuote.html',
-        };
+    window.addEventListener('SPENDOLOGY_WIDGETS_LOADED', function () {
+        var apiUrl = 'https://api-test.alt-nonprod.us.spendology.cloud';
 
-        if (SPENDOLOGY.hasOwnProperty('saveReferralData')) {
-            SPENDOLOGY.saveReferralData(null, 'referral_code');
+        var liveRateBoardId = 'LiveRateBoard';
+        if (document.getElementById(liveRateBoardId)) {
+            var liveRateBoardOptions = {
+                selector: "#" + liveRateBoardId,
+                api_url: apiUrl,
+                button_url: 'https://app-test.alt-nonprod.us.spendology.cloud',
+                button_text: 'GET A QUOTE',
+                refresh_interval: 60000,
+            };
+            SPENDOLOGY.LiveRateBoard.new(liveRateBoardOptions).render();
         }
-
-        SPENDOLOGY.LiveRateBoard.new(options).render();
     });
 </script>
 </html>
