--- a/src/alt/RateComparison.html
+++ b/src/alt/RateComparison.html
@@ -7,8 +7,17 @@
     <meta name="author" content="TravelMoneyClub.co.uk">
     <title>TravelMoneyClub</title>
     <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
-    <link href="../assets/css/europa_font.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+    <link href="css/astra.css" rel="stylesheet">
+    <link href="css/frontend-lite.min.css" rel="stylesheet">
+    <link href="css/main.min.css" rel="stylesheet">
+    <link href="css/global.css" rel="stylesheet">
+    <link href="css/post-5.css" rel="stylesheet">
+    <link href="css/post-7.css" rel="stylesheet">
+    <link href="css/post-13.css" rel="stylesheet">
+    <link href="css/post-205.css" rel="stylesheet">
+    <link href="css/widget-carousel.min.css" rel="stylesheet">
+    <link href="css/widget-nav-menu.min.css" rel="stylesheet">
 </head>
 <body>
     <br />
@@ -16,7 +25,19 @@
     <div class="flex mb-4">
         <div class="sm:invisible md:w-1/3"></div>
         <div class="sm:w-full md:w-1/3">
-            <div id="RateComparison" />
+            <div class="elementor-7 elementor-kit-5 elementor-13 elementor-205">
+                <div class="elementor-section elementor-top-section elementor-element elementor-element-392c5b0 elementor-section-content-middle elementor-section-boxed elementor-section-height-default elementor-section-height-default">
+                    <div class="elementor-column  elementor-top-column elementor-element elementor-element-1f78d34" data-id="1f78d34" data-element_type="column" data-settings="{&quot;background_background&quot;:&quot;classic&quot;}">
+                        <div class="elementor-widget-wrap elementor-element-populated">
+                            <div class="elementor-element elementor-element-0b7bac2 lmd-our-rate elementor-widget elementor-widget-html" data-id="0b7bac2" data-element_type="widget" data-widget_type="html.default">
+                                <div class="elementor-widget-container">
+                                    <div id="RateComparison"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="sm:invisible md:w-1/3"></div>
     </div>
@@ -25,23 +46,25 @@
 </body>
 <script>
     window.addEventListener('SPENDOLOGY_WIDGETS_LOADED', function () {
-        var options = {
-            selector: "#RateComparison",
-            api_url: 'https://api-test.alt-nonprod.us.spendology.cloud',
-            results_message: "Save up to ${saving} right now when exchanging ${comparison_amount}",
-            button_url: "https://app-test.alt-nonprod.us.spendology.cloud/signup",
-            button_text: "Buy Now",
-        };
+        var apiUrl = 'https://api-test.alt-nonprod.us.spendology.cloud';
 
-        if (SPENDOLOGY.hasOwnProperty('saveReferralData')) {
-            SPENDOLOGY.saveReferralData(null, 'referral_code');
+        /*************************************************
+         * Rate Comparison
+         **************************************************/
+        var rateComparisonId = 'RateComparison';
+        if ( document.getElementById(rateComparisonId)) {
+            var rateComparisonOptions = {
+                selector: "#" + rateComparisonId,
+                api_url: apiUrl,
+                button_url: 'https://app-test.alt-nonprod.us.spendology.cloud',
+                button_text: 'GET A QUOTE',
+                poll_frequency:  60000,
+            };
+
+            SPENDOLOGY.RateComparison.new(rateComparisonOptions).render({
+                currencies: []
+            });
         }
-
-        var widget = SPENDOLOGY.RateComparison.new(options).render({
-            currencies: [
-                "EUR", "USD", "AED", "AUD", "CAD", "CHF", "CZK", "DKK", "HKD", "HRK", "HUF", "JPY", "MXN", "NOK", "NZD", "PLN", "SEK", "SGD", "THB", "ZAR"
-            ]
-        });
     });
 </script>
 </html>
